--- a/.github/workflows/appimage_release.yml
+++ b/.github/workflows/appimage_release.yml
@@ -126,11 +126,12 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       run: |
         make DESTDIR=appdir install ; find appdir/
-        
+
         wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
         wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
+        wget -c "https://raw.githubusercontent.com/linuxdeploy/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh"
         wget https://github.com/linuxdeploy/linuxdeploy-plugin-appimage/releases/download/continuous/linuxdeploy-plugin-appimage-x86_64.AppImage
-        chmod +x linuxdeploy*.AppImage
+        chmod +x linuxdeploy*.AppImage linuxdeploy-plugin-gtk.sh        
                
         export MUSEDIR=$(basename -a ${{runner.workspace}}/build/appdir/usr/lib/muse-*)      
         LIB_MODULES=${{runner.workspace}}/build/appdir/usr/lib/$MUSEDIR/modules
@@ -138,7 +139,17 @@ jobs:
         LIB_SYNTHI=${{runner.workspace}}/build/appdir/usr/lib/$MUSEDIR/synthi
         LIB_CONV=${{runner.workspace}}/build/appdir/usr/lib/$MUSEDIR/converters
         export LD_LIBRARY_PATH=$LIB_MODULES:$LIB_PLUGINS:$LIB_SYNTHI:$LIB_CONV:$LD_LIBRARY_PATH
-        ./linuxdeploy-x86_64.AppImage --appdir appdir --plugin qt
+        
+        # install GTK library dependencies for LV2 uis
+        sudo apt install patchelf
+        sudo apt install libgtk2.0-dev
+        sudo apt install libglib2.0-dev
+        sudo apt install librsvg2-dev 
+        export DEPLOY_GTK_VERSION=2
+        ./linuxdeploy-x86_64.AppImage --appdir appdir --plugin=gtk
+        
+        # install QT library dependencies for MusE
+        ./linuxdeploy-x86_64.AppImage --appdir appdir --plugin=qt
         
         echo '#! /usr/bin/env bash' > appdir/AppRun
         echo 'set -e' >> appdir/AppRun
