link with libatomic if needed for the architecture

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -532,6 +532,10 @@ endif (ENABLE_VST_VESTIGE)
 ##
 
 if (ENABLE_LV2)
+find_package(ECM REQUIRED NO_MODULE)
+set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
+include(CheckAtomic)
+
 set (muse_sord_ver "0.16.0")
 set (muse_lv2_ver "1.18.0")
 set (muse_lilv_ver "0.24.0" )
