--- a/.github/workflows/appimage_latest.yml
+++ b/.github/workflows/appimage_latest.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-bionic
         sudo apt-get update
+        # See PR 1077. Required to find libatomic for some archs.
+        sudo apt-get install extra-cmake-modules
         sudo apt-get install libsndfile1-dev libsamplerate0-dev \
           libjack-jackd2-dev ladspa-sdk liblo-dev dssi-dev \
           libsamplerate0-dev libfluidsynth-dev libgtkmm-2.4-dev \
