--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,12 @@ include (CheckCSourceCompiles)
 include(cmake/Summary.cmake)
 include(CheckCXXSymbolExists)
 
+if(NOT HAVE_CXX_ATOMICS_WITHOUT_LIB)
+  find_package(ECM REQUIRED NO_MODULE)
+  set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
+  include(CheckAtomic)
+endif(NOT HAVE_CXX_ATOMICS_WITHOUT_LIB)
+
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
 if (COMMAND cmake_policy)
     cmake_policy(SET CMP0003 NEW)
@@ -532,13 +538,10 @@ endif (ENABLE_VST_VESTIGE)
 ##
 
 if (ENABLE_LV2)
-find_package(ECM REQUIRED NO_MODULE)
-set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
-include(CheckAtomic)
 
-set (muse_sord_ver "0.16.0")
-set (muse_lv2_ver "1.18.0")
-set (muse_lilv_ver "0.24.0" )
+    set (muse_sord_ver "0.16.0")
+    set (muse_lv2_ver "1.18.0")
+    set (muse_lilv_ver "0.24.0" )
 
     PKG_CHECK_MODULES(LILV lilv-0>=${muse_lilv_ver})
     PKG_CHECK_MODULES(SORD sord-0>=${muse_sord_ver})
