--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,11 +31,12 @@ include (CheckCSourceCompiles)
 include(cmake/Summary.cmake)
 include(CheckCXXSymbolExists)
 
-if(NOT HAVE_CXX_ATOMICS_WITHOUT_LIB)
-  find_package(ECM REQUIRED NO_MODULE)
-  set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
-  include(CheckAtomic)
-endif(NOT HAVE_CXX_ATOMICS_WITHOUT_LIB)
+find_package(ECM REQUIRED NO_MODULE)
+set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
+message(" ECM_MODULE_PATH: " ${ECM_MODULE_PATH} )
+message(" ECM_MODULE_DIR: " ${ECM_MODULE_DIR} )
+message(" PACKAGE_PREFIX_DIR: " ${PACKAGE_PREFIX_DIR} )
+include(CheckAtomic)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
 if (COMMAND cmake_policy)
