--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,10 +32,12 @@ include(cmake/Summary.cmake)
 include(CheckCXXSymbolExists)
 
 find_package(ECM REQUIRED NO_MODULE)
-set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
+# set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH ${ECM_MODULE_DIR} ${CMAKE_MODULE_PATH})
 message(" ECM_MODULE_PATH: " ${ECM_MODULE_PATH} )
 message(" ECM_MODULE_DIR: " ${ECM_MODULE_DIR} )
 message(" PACKAGE_PREFIX_DIR: " ${PACKAGE_PREFIX_DIR} )
+message(" CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH} )
 include(CheckAtomic)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
