--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,7 +38,8 @@ message(" ECM_MODULE_PATH: " ${ECM_MODULE_PATH} )
 message(" ECM_MODULE_DIR: " ${ECM_MODULE_DIR} )
 message(" PACKAGE_PREFIX_DIR: " ${PACKAGE_PREFIX_DIR} )
 message(" CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH} )
-include(CheckAtomic)
+# include(CheckAtomic)
+include("${ECM_MODULE_DIR}/CheckAtomic.cmake")
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)
 if (COMMAND cmake_policy)
