--- a/.github/workflows/appimage_latest.yml
+++ b/.github/workflows/appimage_latest.yml
@@ -13,28 +13,30 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
+  latest:
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v2
                  
     - name: Install Deps
       run: |
-        sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-bionic
+        #sudo add-apt-repository -y ppa:beineri/opt-qt-5.15.2-bionic
         sudo apt-get update
         # See PR 1077. Required to find libatomic for some archs.
-        sudo apt-get install extra-cmake-modules
-        sudo apt-get install libsndfile1-dev libsamplerate0-dev \
+        sudo apt-get install -y cmake extra-cmake-modules
+        sudo apt-get install -y libsndfile1-dev libsamplerate0-dev \
           libjack-jackd2-dev ladspa-sdk liblo-dev dssi-dev \
           libsamplerate0-dev libfluidsynth-dev libgtkmm-2.4-dev \
-          libinstpatch-dev liblash-compat-dev librubberband-dev python3-dev librtaudio-dev
+          libinstpatch-dev librubberband-dev python3-dev librtaudio-dev
+        # liblash-compat-dev 
         # liblilv-dev lv2-dev liblrdf0-dev
-        # sudo apt-get install qt5-default qttools5-dev qttools5-dev-tools libqt5svg5-dev
-        sudo apt-get install mesa-common-dev libglu1-mesa-dev
-        sudo apt-get install qt515base qt515tools qt515svg
+        sudo apt-get install -y qttools5-dev qttools5-dev-tools libqt5svg5-dev
+        sudo apt-get install -y mesa-common-dev libglu1-mesa-dev
+        #sudo apt-get install -y qt515base qt515tools qt515svg
+        sudo apt-get install -y fuse
         
-        sudo apt-get remove libsord-0-0 libserd-0-0
+        sudo apt-get remove -y libsord-0-0 libserd-0-0
         
         # wget http://mirrors.kernel.org/ubuntu/pool/universe/r/rtaudio/librtaudio6_5.0.0~ds-2_amd64.deb
         # wget http://mirrors.kernel.org/ubuntu/pool/universe/r/rtaudio/librtaudio-dev_5.0.0~ds-2_amd64.deb 
@@ -116,12 +118,13 @@ jobs:
         
     - name: Build
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config $BUILD_TYPE -j3
+      run: 
+        cmake --build . --config $BUILD_TYPE -j3
         
     - name: Create AppImage
       working-directory: ${{runner.workspace}}/build
       run: |
-        make DESTDIR=appdir install ; find appdir/
+        make -j3 DESTDIR=appdir install ; find appdir/
         
         find appdir \( -name "moc_*" -or -name "*.o" -or -name "qrc_*" -or -name "Makefile*" -or -name "*.a" \) -exec rm {} \;
         wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
