--- a/.github/workflows/appimage_release.yml
+++ b/.github/workflows/appimage_release.yml
@@ -18,41 +18,32 @@ env:
   TAG: ${{ github.event.inputs.tag }}
 
 jobs:
-  build:
-    runs-on: ubuntu-18.04
+  release:
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        ref: ${{ env.TAG }}
+    #   with:
+    #     ref: ${{ env.TAG }}
                  
     - name: Install Deps
       run: |
-        # See PR 1077. Required to find libatomic for some archs.
-        sudo apt-get install extra-cmake-modules
-        sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-bionic
+        #sudo add-apt-repository -y ppa:beineri/opt-qt-5.15.2-bionic
         sudo apt-get update
-        sudo apt-get install libsndfile1-dev 
-        sudo apt-get install libsamplerate0-dev 
-        sudo apt-get install libjack-jackd2-dev
-        sudo apt-get install ladspa-sdk
-        sudo apt-get install liblo-dev
-        sudo apt-get install dssi-dev
-        sudo apt-get install libsamplerate0-dev
-        sudo apt-get install libfluidsynth-dev
-        sudo apt-get install libgtkmm-2.4-dev
-        sudo apt-get install libinstpatch-dev 
-        sudo apt-get install liblash-compat-dev 
-        sudo apt-get install librubberband-dev 
-        sudo apt-get install python3-dev 
-        sudo apt-get install librtaudio-dev
-        
+        # See PR 1077. Required to find libatomic for some archs.
+        sudo apt-get install -y cmake extra-cmake-modules
+        sudo apt-get install -y libsndfile1-dev libsamplerate0-dev \
+          libjack-jackd2-dev ladspa-sdk liblo-dev dssi-dev \
+          libsamplerate0-dev libfluidsynth-dev libgtkmm-2.4-dev \
+          libinstpatch-dev librubberband-dev python3-dev librtaudio-dev
+        # liblash-compat-dev 
         # liblilv-dev lv2-dev liblrdf0-dev
-        # sudo apt-get install qt5-default qttools5-dev qttools5-dev-tools libqt5svg5-dev
-        sudo apt-get install mesa-common-dev libglu1-mesa-dev
-        sudo apt-get install qt515base qt515tools qt515svg
+        sudo apt-get install -y qttools5-dev qttools5-dev-tools libqt5svg5-dev
+        sudo apt-get install -y mesa-common-dev libglu1-mesa-dev
+        #sudo apt-get install -y qt515base qt515tools qt515svg
+        sudo apt-get install -y fuse
         
-        sudo apt-get remove libsord-0-0 libserd-0-0
+        sudo apt-get remove -y libsord-0-0 libserd-0-0
         
         # wget http://mirrors.kernel.org/ubuntu/pool/universe/r/rtaudio/librtaudio6_5.0.0~ds-2_amd64.deb
         # wget http://mirrors.kernel.org/ubuntu/pool/universe/r/rtaudio/librtaudio-dev_5.0.0~ds-2_amd64.deb 
@@ -67,6 +58,7 @@ jobs:
         ./waf configure
         ./waf
         sudo ./waf install
+
     - name: Build serd
       run: |
         mkdir ${{runner.workspace}}/serd_build
@@ -128,24 +120,26 @@ jobs:
     - name: Configure CMake
       working-directory: ${{runner.workspace}}/build
       run: |
-        REPO_PATH=$GITHUB_WORKSPACE/src    
+        REPO_PATH=$GITHUB_WORKSPACE/src     
         cmake $REPO_PATH -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX=/usr -DMODULES_BUILD_STATIC=ON
-    
+        
     - name: Build
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config $BUILD_TYPE -j3
+      run: 
+        cmake --build . --config $BUILD_TYPE -j3
         
     - name: Create AppImage
       working-directory: ${{runner.workspace}}/build
       run: |
-        make DESTDIR=appdir install ; find appdir/
-
+        make -j3 DESTDIR=appdir install ; find appdir/
+        
+        find appdir \( -name "moc_*" -or -name "*.o" -or -name "qrc_*" -or -name "Makefile*" -or -name "*.a" \) -exec rm {} \;
         wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
         wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
         wget -c "https://raw.githubusercontent.com/linuxdeploy/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh"
         wget https://github.com/linuxdeploy/linuxdeploy-plugin-appimage/releases/download/continuous/linuxdeploy-plugin-appimage-x86_64.AppImage
-        chmod +x linuxdeploy*.AppImage linuxdeploy-plugin-gtk.sh        
-               
+        chmod +x linuxdeploy*.AppImage linuxdeploy-plugin-gtk.sh
+        
         export MUSEDIR=$(basename -a ${{runner.workspace}}/build/appdir/usr/lib/muse-*)      
         LIB_MODULES=${{runner.workspace}}/build/appdir/usr/lib/$MUSEDIR/modules
         LIB_PLUGINS=${{runner.workspace}}/build/appdir/usr/lib/$MUSEDIR/plugins
@@ -158,6 +152,7 @@ jobs:
         sudo apt install libgtk2.0-dev
         sudo apt install libglib2.0-dev
         sudo apt install librsvg2-dev 
+
         export DEPLOY_GTK_VERSION=2
         ./linuxdeploy-x86_64.AppImage --appdir appdir --plugin=gtk
         
