--- a/src/muse/CMakeLists.txt
+++ b/src/muse/CMakeLists.txt
@@ -314,6 +314,8 @@ target_link_libraries(core
       ${SNDFILE_LIBRARIES}
       # Note that this also appears in the audio_convert/src_resampler shared library.
       ${SAMPLERATE_LIBRARIES}
+      # Note that this also appears in the fluidsynth MESS shared library.
+      ${INSTPATCH_LIBRARIES}
       ${REM_LIB}
       ${FST_LIB}
       dl
