Changed all references to the app's site url, help url etc.

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -53,7 +53,10 @@
 #define VERSION             "${MusE_VERSION_FULL}"
 #define GITSTRING           "${MusE_GITSTRING}"
 #define ORGANIZATION_NAME   "MusE"
-#define ORGANIZATION_DOMAIN "muse-sequencer.org"
+#define ORGANIZATION_DOMAIN "muse-sequencer.github.io"
+#define ORGANIZATION_URL    "https://muse-sequencer.github.io/"
+#define ORGANIZATION_HELP_URL "https://muse-sequencer.github.io/docs/"
+#define ORGANIZATION_CODE_REPO_URL "https://github.com/muse-sequencer/muse/"
 #define PACKAGE_NAME        "MusE"
 #define APP_DISPLAY_NAME    "MusE"
 #define APP_DESCRIPTION     "MusE: Linux Music Editor"
