Use TkInter as GUI framework in scripts instead of Qt.
The simple reason for this is compatibility. Current scripts written in
python will benefit since tkinter is shipped with python.

Recently we had an issue where the GUI-scripts didn't work when executed
from the AppImage, this should solve this.

--- a/src/share/scripts/CMakeLists.txt
+++ b/src/share/scripts/CMakeLists.txt
@@ -23,6 +23,7 @@
 
 file(GLOB script_files
       ConstantLength
+      TK_ConstantLength
       ConstantVelocityForNote
       DoNothing 
       CreateBassline
