Added two more midi scripts converted to TkInter

--- a/src/share/scripts/CMakeLists.txt
+++ b/src/share/scripts/CMakeLists.txt
@@ -24,6 +24,8 @@
 file(GLOB script_files
       ConstantLength
       TK_ConstantLength
+      TK_ConstantVelocityForNote
+      TK_TempoDelay
       ConstantVelocityForNote
       DoNothing 
       CreateBassline
