Replaced all popen with QProcess. Rewrote grepmidi.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -798,7 +798,8 @@ ADD_SUBDIRECTORY (libs)
 ADD_SUBDIRECTORY (audio_convert)
 ADD_SUBDIRECTORY (al)
 ADD_SUBDIRECTORY (awl)
-ADD_SUBDIRECTORY (grepmidi)
+# ADD_SUBDIRECTORY (grepmidi)
+ADD_SUBDIRECTORY (grepmidi_qt)
 ADD_SUBDIRECTORY (sandbox)
 ADD_SUBDIRECTORY (man)
 ADD_SUBDIRECTORY (plugins)
