Issue 1308 fixes: Feat req Adjustable Middle C

--- a/src/muse/CMakeLists.txt
+++ b/src/muse/CMakeLists.txt
@@ -123,6 +123,7 @@ file (GLOB core_source_files
       mtc.cpp
       name_factory.cpp
       node.cpp
+      note_names.cpp
       operations.cpp
       osc.cpp
       part.cpp
