--- a/src/share/note_names/CMakeLists.txt
+++ b/src/share/note_names/CMakeLists.txt
@@ -3,7 +3,7 @@
 #  Linux Music Editor
 #  $Id:$
 #
-#  Copyright (C) 1999-2011 by Werner Schweer and others
+#  Copyright (C) 2025 by MusE dev team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License
@@ -21,21 +21,9 @@
 #  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #=============================================================================
 
-# NOTE: locale/ directory needs to be at the end so that the translations
-#       are scanned before coming to share/locale
+file (GLOB notename_files *.mnn)
 
-ADD_SUBDIRECTORY(drummaps)
-ADD_SUBDIRECTORY(instruments)
-ADD_SUBDIRECTORY(plugins)
-ADD_SUBDIRECTORY(pybridge)
-ADD_SUBDIRECTORY(scripts)
-ADD_SUBDIRECTORY(templates)
-ADD_SUBDIRECTORY(wallpapers)
-ADD_SUBDIRECTORY(scoreglyphs)
-ADD_SUBDIRECTORY(note_names)
-ADD_SUBDIRECTORY(locale)
-ADD_SUBDIRECTORY(themes)
-ADD_SUBDIRECTORY(metronome)
-ADD_SUBDIRECTORY(rdf)
+install( FILES ${notename_files}
+      DESTINATION ${MusE_SHARE_DIR}/note_names
+      )
 
-install (FILES didyouknow.txt splash.jpg DESTINATION ${MusE_SHARE_DIR} )
